[gd_scene load_steps=3 format=3 uid="uid://8w1ej44k1x0w"]

[ext_resource type="Texture2D" uid="uid://bgrxc21ychv1o" path="res://assets/homescreen.png" id="1_4hbhq"]
[ext_resource type="Script" path="res://MainMenu/index.gd" id="1_vxg5o"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vxg5o")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_4hbhq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 0
offset_left = 695.0
offset_right = 1049.0
offset_bottom = 648.0
theme_override_constants/separation = 40
alignment = 1

[node name="PuzzleGame" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PuzzleGameButton" type="Button" parent="VBoxContainer/PuzzleGame"]
layout_mode = 2
text = "Puzzles"

[node name="Label" type="Label" parent="VBoxContainer/PuzzleGame"]
layout_mode = 2
text = "Complete the puzzle to advance levels"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Daily" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DailyGameButton" type="Button" parent="VBoxContainer/Daily"]
layout_mode = 2
text = "Daily"

[node name="Label" type="Label" parent="VBoxContainer/Daily"]
layout_mode = 2
text = "New challenges daily"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Tutorial" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TutorialButton" type="Button" parent="VBoxContainer/Tutorial"]
layout_mode = 2
text = "Tutorial"

[node name="Label" type="Label" parent="VBoxContainer/Tutorial"]
layout_mode = 2
text = "Learn the basics"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PlayerGenerated" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayChallengeButton" type="Button" parent="VBoxContainer/PlayerGenerated"]
layout_mode = 2
disabled = true
text = "Play Challenges"

[node name="CreateChallenge" type="Button" parent="VBoxContainer/PlayerGenerated"]
layout_mode = 2
disabled = true
text = "Create Challenge (Coming Soon)"

[node name="Label" type="Label" parent="VBoxContainer/PlayerGenerated"]
layout_mode = 2
text = "Build levels and challenge others"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Misc" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreditsButton" type="Button" parent="VBoxContainer/Misc"]
layout_mode = 2
text = "Credits"

[node name="ExitButton" type="Button" parent="VBoxContainer/Misc"]
layout_mode = 2
text = "Exit
"
